--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -1,11 +1,17 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: tanzu-java-web-app
+  name: tanzu-java-web-app-git
   labels:
-    apps.tanzu.vmware.com/workload-type: web-basic
+    apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/has-tests: true
     app.kubernetes.io/part-of: tanzu-java-web-app
 spec:
+  params:
+   - name: gitops_repository
+     value: ssh://git@github.com/nitashav-vmw/dell-ops
+   - name: gitops_branch
+     value: tanzu-java-web-app
   source:
     git:
       url: https://github.com/sample-accelerators/tanzu-java-web-app
