--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -16,4 +16,4 @@ spec:
     git:
       url: https://github.com/nitashav-vmw/tanzu-java-web-app-git
       ref:
-        branch: main
+        branch: master
