--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -14,6 +14,6 @@ spec:
      value: tanzu-java-web-app
   source:
     git:
-      url: https://github.com/sample-accelerators/tanzu-java-web-app
+      url: https://github.com/nitashav-vmw/tanzu-java-web-app-git
       ref:
-        branch: main
+        branch: master
